moved from phaseadvanceevent to specifc events for the phasees